--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chifa Pon Tu</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
+    <title>CHIFA PON TU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/icon/icon.png">
+    <link rel="icon" href="src/img/icon.png">
 </head>
 <body>
     <header class="encabezado">
-        <div class="contenedor-navegacion ">
+        <div class="contenedor-navegacion">
             <div class="contenido-navegacion contenedor">
                 <div class="logo">
-                    <h2>Chifa <span class="rojo">Pon</span> <span class="verde">Tu</span> </h2>
+                    <h2>CHIFA <span class="rojo">PON</span> <span class="verde">TU</span> </h2>
                 </div>
                 <nav class="navegacion ocultar">
                     <a href="#">Inicio</a>
                     <a href="#">Sobre Nosotros</a>
-                    <a href="#">Menu</a>
+                    <a href="#">Menú</a>
                     <a href="#">Chef</a>
                     <a href="#">Contacto</a>
                 </nav>
@@ -28,6 +28,20 @@
                     <span></span>
                     <span></span>
                     <span></span>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <div class="contenido-header">
+                <div class="contenedor-encabezado">
+                    <div class="texto-encabezado">
+                        <h2>Mega sazon</h2>
+                        <a class="btn borders" href="#">Nuestro Menú</a>
+                    </div>
+                    <video autoplay loop muted>
+                        <source src="assets/video/coffe.mp4">
+                    </video>
                 </div>
             </div>
         </div>
