--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
         </div>
     </header>
 
+    <div class="contenedor-nosotros contenedor">
+        <div class="texto-nosotros">
+            <p class="bienvenida">Bienvenido</p>
+            <h1>Chifa Pon Tu</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, dolorem esse? Dolores corrupti amet sequi doloribus, a sapiente aperiam odio. Tenetur eveniet harum quidem, vero laudantium corporis est blanditiis ducimus?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In aut adipisci aliquid aspernatur, illo provident porro voluptate, deleniti est culpa sapiente consequatur? In incidunt perferendis eius unde. Repudiandae, odio? Beatae?
+            </p>
+            <a href="#" class="btn btn-rojo">Contactar</a>
+        </div>
+        <div class="imagenes-nosotros">
+            <div class="imagen1">
+                <img data-src="assets/img/nosotros1.webp" alt="imagen1">
+            </div>
+            <div class="imagenes2">
+                <img data-src="assets/img/nosotros2.webp" alt="imagen2">
+                <img data-src="assets/img/nosotros3.webp" alt="imagen3">
+            </div>
+        </div>
+    </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
