--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="src/img/icon.png">
+    <link rel="icon" href="assets/icon/icon.png">
 </head>
 <body>
     <header class="encabezado">
@@ -66,6 +66,11 @@
             </div>
         </div>
     </div>
+
+
+    <section class="menu contenedor">
+        <h2>Platillos populares</h2>
+    </section>
 
     <script src="js/app.js"></script>
 </body>
