--- a/index.html
+++ b/index.html
@@ -69,7 +69,147 @@
 
 
     <section class="menu contenedor">
-        <h2>Platillos populares</h2>
+        <h2 class="texto-platillos">Platillos populares</h2>
+        <div class="botones-platillos">
+            <button class="todos btn btn-verde">Todos</button>
+            <button class="ensaladas btn btn-verde">Ensaladas</button>
+            <button class="pasta btn btn-verde">Pasta</button>
+            <button class="pizza btn btn-verde">Pizza</button>
+            <button class="postres btn btn-verde">Postres</button>
+        </div>
+
+        <div class="platillos">
+            <div class="platillo" data-platillo="ensalada">
+                <img data-src="assets/img/pasta1.webp" alt="ensalada">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="ensalada">
+                <img data-src="assets/img/pasta1.webp" alt="ensalada">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="ensalada">
+                <img data-src="assets/img/pasta1.webp" alt="ensalada">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+
+            <div class="platillo" data-platillo="pasta">
+                <img data-src="assets/img/pasta1.webp" alt="pasta">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="pasta">
+                <img data-src="assets/img/pasta1.webp" alt="pasta">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="pasta">
+                <img data-src="assets/img/pasta1.webp" alt="pasta">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+
+            <div class="platillo" data-platillo="pizza">
+                <img data-src="assets/img/pasta1.webp" alt="pizza">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="pizza">
+                <img data-src="assets/img/pasta1.webp" alt="pizza">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="pizza">
+                <img data-src="assets/img/pasta1.webp" alt="pizza">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+
+            <div class="platillo" data-platillo="postre">
+                <img data-src="assets/img/pasta1.webp" alt="postre">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="postre">
+                <img data-src="assets/img/pasta1.webp" alt="postre">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+            <div class="platillo" data-platillo="postre">
+                <img data-src="assets/img/pasta1.webp" alt="postre">
+                <h2>Pasta</h2>
+                <p>Pasta, tallarin, oregano y azufre</p>
+
+                <div class="precio">
+                    <p>s/40.0</p>
+                    <button>Comprar</button>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+
+        </div>
     </section>
 
     <script src="js/app.js"></script>
