--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="platillos">
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/pasta1.webp" alt="ensalada">
-                <h2>Pasta</h2>
+                <h2>Ensalada</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -91,7 +91,7 @@
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/pasta1.webp" alt="ensalada">
-                <h2>Pasta</h2>
+                <h2>Ensalada</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -101,7 +101,7 @@
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/pasta1.webp" alt="ensalada">
-                <h2>Pasta</h2>
+                <h2>Ensalada</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -143,7 +143,7 @@
 
             <div class="platillo" data-platillo="pizza">
                 <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pasta</h2>
+                <h2>Pizza</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -153,7 +153,7 @@
             </div>
             <div class="platillo" data-platillo="pizza">
                 <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pasta</h2>
+                <h2>Pizza</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -163,7 +163,7 @@
             </div>
             <div class="platillo" data-platillo="pizza">
                 <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pasta</h2>
+                <h2>Pizza</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -174,7 +174,7 @@
 
             <div class="platillo" data-platillo="postre">
                 <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Pasta</h2>
+                <h2>Postre</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -184,7 +184,7 @@
             </div>
             <div class="platillo" data-platillo="postre">
                 <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Pasta</h2>
+                <h2>Postre</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
@@ -194,7 +194,7 @@
             </div>
             <div class="platillo" data-platillo="postre">
                 <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Pasta</h2>
+                <h2>Postre</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
