agregue el nombre ceviche

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/pasta1.webp" alt="ensalada">
-                <h2>Ensalada</h2>
+                <h2>Ceviche</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
