--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
             <div class="platillo" data-platillo="postre">
                 <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
+                <h2>kaluwantan</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
