--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHIFA PON TU</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"><i class="bi bi-info-circle"></i>
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -86,7 +87,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
@@ -96,7 +97,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
@@ -106,7 +107,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
@@ -117,7 +118,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
@@ -127,7 +128,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="pasta">
@@ -137,7 +138,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
@@ -148,7 +149,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="pizza">
@@ -158,7 +159,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="pizza">
@@ -168,7 +169,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
@@ -179,7 +180,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="postre">
@@ -189,7 +190,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="postre">
@@ -199,7 +200,7 @@
 
                 <div class="precio">
                     <p>s/40.0</p>
-                    <button>Comprar</button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
