--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHIFA PON TU</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"><i class="bi bi-info-circle"></i>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -205,11 +205,26 @@
             </div>
 
         </div>
+    </section>
 
+    <div class="separador">
+        <div class="contenido-separador contenedor">
+            <h2>Comida china a tu alcance</h2>
+            <p>Nada mejor en tu dia que comer un delicioso buffet con nostros</p>
+            <a href="#" class="btn btn-verde">Informacion aqui</a>
+        </div>
+    </div>
 
-
-
-
+    <section class="chef contenedor">
+        <h2>Chef principal</h2>
+        <div class="texto-chef">
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt possimus, placeat iste dolorum illum nihil ex impedit eos dignissimos sequi neque accusamus? Dolore voluptatem alias quasi corporis sed quod.</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium nihil iste est excepturi sunt dolorem. Quo officiis eos ullam illo praesentium. Ipsum quas dolores quaerat laboriosam dolorem et maxime ex.
+            Perspiciatis cupiditate, pariatur quae deleniti adipisci assumenda earum, eius facilis sit ullam similique accusamus. Asperiores, similique dolore odit expedita molestias rem numquam quia quam inventore natus, delectus, blanditiis ipsam molestiae.</p>
+            <a href="#" class="btn btn-verde" >Leer Biografia</a>
+        </div>
+        <div class="imagen-chef">
+            <img data-src="assets/img/chef.webp" alt="Chef">
         </div>
     </section>
 
