Seccion del chef terminada

--- a/index.html
+++ b/index.html
@@ -217,15 +217,17 @@
 
     <section class="chef contenedor">
         <h2>Chef principal</h2>
-        <div class="texto-chef">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt possimus, placeat iste dolorum illum nihil ex impedit eos dignissimos sequi neque accusamus? Dolore voluptatem alias quasi corporis sed quod.</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium nihil iste est excepturi sunt dolorem. Quo officiis eos ullam illo praesentium. Ipsum quas dolores quaerat laboriosam dolorem et maxime ex.
-            Perspiciatis cupiditate, pariatur quae deleniti adipisci assumenda earum, eius facilis sit ullam similique accusamus. Asperiores, similique dolore odit expedita molestias rem numquam quia quam inventore natus, delectus, blanditiis ipsam molestiae.</p>
-            <a href="#" class="btn btn-verde" >Leer Biografia</a>
-        </div>
-        <div class="imagen-chef">
-            <img data-src="assets/img/chef.webp" alt="Chef">
-        </div>
+            <div class="contenido-chef">
+                <div class="texto-chef">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt possimus, placeat iste dolorum illum nihil </h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium nihil iste est excepturi sunt dolorem. Quo officiis eos ullam illo praesentium. Ipsum quas dolores quaerat laboriosam dolorem et maxime ex.
+                    Perspiciatis cupiditate, pariatur quae deleniti adipisci assumenda earum, eius facilis sit ullam similique accusamus. Asperiores</p>
+                    <a href="#" class="btn btn-verde" >Leer Biografia</a>
+                </div>
+                <div class="imagen-chef">
+                    <img data-src="assets/img/chef.webp" alt="Chef">
+                </div>
+            </div>
     </section>
 
     <script src="js/app.js"></script>
