Formulario terminado (Sin css)

--- a/index.html
+++ b/index.html
@@ -230,6 +230,55 @@
             </div>
     </section>
 
+
+    <div class="formulario-contacto">
+        <div class="informacion-contacto">
+            <h3>Contactanos</h3>
+            <p><i class="bi bi-geo-alt-fill"></i> Los geranios 3388 Surco</p>
+            <p><i class="bi bi-envelope-fill"></i> lolalele@ouktlok.com</p>
+            <p><i class="bi bi-whatsapp"></i></i> +78123456789</p>
+
+            <div class="redes-sociales">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-instagram"></i>
+            </div>
+        </div>
+
+        <form class="formulario">
+            <div class="input-formulario">
+                <label for="nombre">Nombre</label>
+                <input type="text" placeholder="Rico papi mosilot" id="nombre">
+            </div>
+
+            <div class="input-formulario">
+                <label for="apellidos">Apellido</label>
+                <input type="text" placeholder="Barrena Bernardo" id="apellidos">
+            </div>
+
+            <div class="input-formulario">
+                <label for="correo">Correo</label>
+                <input type="email" placeholder="Barrena@gmail.com" id="correo">
+            </div>
+
+            <div class="input-formulario">
+                <label for="telefono">Telefono</label>
+                <input type="tel" placeholder="111 222 333" id="telefono">
+            </div>
+
+            <div class="input-formulario">
+                <label for="mensaje">Mensaje</label>
+                <textarea id="mensaje" cols="10" rows="2" ></textarea>
+            </div>   
+
+            <div class="input-formulario">
+                <input type="submit" class="btn btn-verde" value="Enviar">
+            </div> 
+            
+        </form>
+        
+    </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
