--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="btn borders" href="#">Nuestro Menú</a>
                     </div>
                     <video autoplay loop muted>
-                        <source src="assets/video/coffe.mp4">
+                        <source src="assets/video/chifa1.mp4">
                     </video>
                 </div>
             </div>
@@ -52,18 +52,23 @@
         <div class="texto-nosotros">
             <p class="bienvenida">Bienvenido</p>
             <h1>Chifa Pon Tu</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, dolorem esse? Dolores corrupti amet sequi doloribus, a sapiente aperiam odio. Tenetur eveniet harum quidem, vero laudantium corporis est blanditiis ducimus?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. In aut adipisci aliquid aspernatur, illo provident porro voluptate, deleniti est culpa sapiente consequatur? In incidunt perferendis eius unde. Repudiandae, odio? Beatae?
+            <p>El restaurante de comida oriental “CHIFA PON TU” lleva más de 20 años brindando y alegrando el
+                 paladar de sus comensales con su sazón única e inigualable, entregando un excelente servicio 
+                 y como la mejor alternativa para compartir un buen momento familiar o en compañía de los amigos. 
+                 Es un lugar mediano a diferencia de restaurantes más grandes y reconocidos, sin embargo, es muy 
+                 consumido y catalogado por sus comensales como uno de las mejores chifas del cono norte a nivel
+                  de Comas; por la misma razón llegan clientes en abundancia día tras día de diferentes lugares 
+                  de la capital a degustar su inigualable sazón.
             </p>
             <a href="#" class="btn btn-rojo">Contactar</a>
         </div>
         <div class="imagenes-nosotros">
             <div class="imagen1">
-                <img data-src="assets/img/nosotros1.webp" alt="imagen1">
+                <img data-src="assets/img/chicacomida.webp" alt="imagen1">
             </div>
             <div class="imagenes2">
-                <img data-src="assets/img/nosotros2.webp" alt="imagen2">
-                <img data-src="assets/img/nosotros3.webp" alt="imagen3">
+                <img data-src="assets/img/chaufacomida.webp" alt="imagen2">
+                <img data-src="assets/img/tallarinsaltadocomida.webp" alt="imagen3">
             </div>
         </div>
     </div>
@@ -72,7 +77,7 @@
     <section class="menu contenedor">
         <h2 class="texto-platillos">Platillos populares</h2>
         <div class="botones-platillos">
-            <button class="todos btn btn-verde">Todos</button>
+            <button class="todos btn btn-verde">Menú</button>
             <button class="ensaladas btn btn-verde">Ensaladas</button>
             <button class="pasta btn btn-verde">Pasta</button>
             <button class="pizza btn btn-verde">Pizza</button>
@@ -82,21 +87,21 @@
         <div class="platillos">
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/pasta1.webp" alt="ensalada">
-                <h2>Ensalada</h2>
-                <p>Pasta, tallarin, oregano y azufre</p>
+                <h2>Arroz chaufa de pollo</h2>
+                <p>Arroz, pollo, pimiento rojo, huevo, salchihia fresca y cebolla china</p>
 
                 <div class="precio">
-                    <p>s/40.0</p>
+                    <p>s/11.0</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
             <div class="platillo" data-platillo="ensalada">
                 <img data-src="assets/img/pasta1.webp" alt="ensalada">
-                <h2>Ensalada</h2>
+                <h2>Arroz chaufa de chancho</h2>
                 <p>Pasta, tallarin, oregano y azufre</p>
 
                 <div class="precio">
-                    <p>s/40.0</p>
+                    <p>s/13.0</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
