--- a/index.html
+++ b/index.html
@@ -68,29 +68,29 @@
     </div>
 
     <section class="menu contenedor">
-        <h2 class="texto-platillos">Nuestros Platillos</h2>
-        <div class="botones-platillos">
-            <button class="todos btn btn-azul">Todos</button> <!--cambio -->
-            <button class="ensaladas btn btn-azul">Ensaladas</button> <!--cambio -->
-            <button class="pasta btn btn-azul">Pasta</button> <!--cambio -->
-            <button class="pizza btn btn-azul">Pizza</button> <!--cambio -->
-            <button class="postres btn btn-azul">Postres</button> <!--cambio -->
-        </div>
+        <h2 class="texto-platillos">Platillos Principales</h2>
+        <!-- <div class="botones-platillos">
+            <button class="todos btn btn-azul">Todos</button>   cambio 
+            <button class="ensaladas btn btn-azul">Ensaladas</button>   cambio
+            <button class="pasta btn btn-azul">Pasta</button>    cambio 
+            <button class="pizza btn btn-azul">Pizza</button>    cambio 
+            <button class="postres btn btn-azul">Postres</button>   cambio 
+        </div> -->
 
         <div class="platillos">
             <div class="platillo" data-platillo ="ensalada">
-                <img data-src="assets/img/chaufaespecial.webp" alt="ensalada">
-                <h2>Chaufa especial</h2>
-                <p>Arroz salteado con langostino, chancho, pollo y cebolla china.</p>
+                <img data-src="assets/img/aeropuertodepollo_aeropuerto.webp" alt="ensalada">
+                <h2>Aeropuerto de pollo</h2>
+                <p>Arroz salteado con tallarín frito, pollo, huevo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>S/. 19.00 clásico - S/. 36.00 mediano S/. 54.00 familiar</p>
+                    <p>S/. 17.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="ensalada">
-                <img data-src="assets/img/chaufapollo.webp" alt="ensalada">
+                <img data-src="assets/img/chaufadepollo_chaufas.webp" alt="ensalada">
                 <h2>Chaufa de pollo</h2>
                 <p>Arroz salteado con pollo, huevo y cebolla china.</p>
 
@@ -101,23 +101,24 @@
             </div>
 
             <div class="platillo" data-platillo ="ensalada">
-                <img data-src="assets/img/chaufalangostino.webp" alt="ensalada">
-                <h2>Chaufa de langostino</h2>
-                <p>Arroz salteado con langostinos, huevo y cebolla china.</p>
+                <img data-src="assets/img/sopawantan_sopas.webp" alt="ensalada">
+                <h2>SOPA WANTAN</h2>
+                <p>Caldo de pollo acompañado 
+                    de wántan al vapor, fideos y rodajas de pollo.</p>
 
                 <div class="precio">
-                    <p>S/. 18.00 clásico</p>
+                    <p>S/. 13.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pasta">
-                <img data-src="assets/img/pasta1.webp" alt="pasta">
-                <h2>Pasta</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/tallarintaypa_tallarines.webp" alt="pasta">
+                <h2>TALLARÍN TAYPA</h2>
+                <p>Tallarín con todas las carnes y verduras salteadas en salsa de ostión.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 33.00</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
@@ -205,7 +206,7 @@
                 <p>Pasta, tallarin, orégano y azufre</p>
 
                 <div class="precio">
-                    <p>s/40.01</p>
+                    <p>s/40.00</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
