--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
     </section>
 
-    <div class="formulario-contacto">
+    <div class="formulario-contacto contenedor">
         <div class="informacion-contacto">
             <h3>Contactanos</h3>
             <p><i class="bi bi-geo-alt-fill"></i> Los Geranios 3388 Surco</p>
@@ -276,7 +276,7 @@
                 <textarea id="mensaje" cols="10" rows="2" ></textarea>
             </div>
 
-            <div class="input-formulario">
+            <div class="btn-formulario">
                 <input type="submit" class="btn btn-azul" value="Enviar">
             </div>
         </form>
