Proyecto Generico terminado

--- a/index.html
+++ b/index.html
@@ -282,6 +282,39 @@
         </form>
     </div>
 
+    <div class="pie-pagina ">
+        <div class="contenedor-piepagina contenedor">
+            <div class="info">
+                <h3>Direccion</h3>
+                <p>Avenida belaunde pana</p>
+            </div>
+            <div class="info">
+                <h3>Dias Especiales</h3>
+                <p>Sabados y domingos 12am - 4am</p>
+                <p>+51925799489</p>
+            </div>
+            <div class="info">
+                <h3>Horarios</h3>
+                <p>Lunes - Domingo 1am - 12am</p>
+                <div class="redes-sociales redes-pie">
+                    <p><i class="bi bi-facebook"></i>
+                    <i class="bi bi-twitter"></i>
+                    <i class="bi bi-instagram"></i></p>
+                </div>
+            </div>
+            <div class="info">
+                <h3>Noticias</h3>
+                <p>Visitanos para probar la sazon</p>
+                <input type="email" placeholder="Tu correo">
+                <input type="submit" class="btn btn-azul" value="Suscribirse">
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>Todos los derechos reservados &copy;MarcosRomero</p>
+    </footer>
+
     <script src="js/app.js"></script>
 </body>
 </html>
