Proyecto generico terminado

--- a/index.html
+++ b/index.html
@@ -282,6 +282,39 @@
         </form>
     </div>
 
+    <div class="pie-pagina">
+        <div class="contenedor-piepagina  contenedor">
+            <div class="info">
+                <h3>Direccion</h3>
+                <p>Av. Belaunde</p>
+            </div>
+            <div class="info">
+                <h3>Días Especiales</h3>
+                <p>Sábados y domingos 12pm - 4pm</p>
+                <p>+51 960 454 537</p>
+            </div>
+            <div class="info">
+                <h3>Horarios</h3>
+                <p>Lunes - Domingos 10am - 11pm</p>
+                <div class="redes-sociales redes-pie">
+                    <p><i class="bi bi-facebook"></i>
+                    <i class="bi bi-twitter"></i>
+                    <i class="bi bi-instagram"></i></p>
+                </div>
+            </div>
+            <div class="info">
+                <h3>Noticias</h3>
+                <p>Visitanos</p>
+                <input type="email" placeholder="Tu correo">
+                <input type="submit" class="btn btn-azul" value="Suscribirse">
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>Todos los derechos reservador &copy;ChifaPonTu</p>
+    </footer>
+
     <script src="js/app.js"></script>
 </body>
 </html>
