actualizacion de informacion y fotos

--- a/index.html
+++ b/index.html
@@ -52,16 +52,25 @@
         <div class="texto-nosotros">
             <p class="bienvenido">Bienvenido</p>
             <h1>Chifa Pon Tu</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo assumenda tempore laborum accusantium, aspernatur molestias, accusamus autem aut obcaecati omnis harum provident dolores ipsam iste distinctio a quam maxime sit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum accusamus voluptatum quibusdam nihil, doloremque tempora, earum cupiditate nesciunt harum vitae amet officiis quia dolore sed exercitationem similique distinctio corporis illum.</p>
+            <p>El restaurante de comida oriental “CHIFA PON TU” lleva más de 20 años brindando y alegrando el paladar de sus comensales con su sazón única e inigualable, entregando un excelente servicio y como la mejor alternativa para compartir un buen momento familiar o en compañía de los amigos. Es un lugar mediano a diferencia de restaurantes más grandes y reconocidos, sin embargo, es muy consumido y catalogado por sus comensales como uno de las mejores chifas del cono norte a nivel de Comas; por la misma razón llegan clientes en abundancia día tras día de diferentes lugares de la capital a degustar su inigualable sazón.</p>
 
             <a href="#" class="btn btn-rojo">Contactar</a>
         </div>
         <div class="imagenes-nosotros">
             <div class="imagen1">
+                <BR>
+                <BR>
+                <BR>
                 <img data-src="assets/img/chicacomida.webp" alt="img1">
             </div>
             <div class="imagenes2">
-                <img data-src="assets/img/chaufacomida.webp" alt="img2">
+                <BR>
+                <BR>
+                <BR>
+                <img data-src="assets/img/chaufacomida_bienvenido.webp" alt="img2">
+                <BR>
+                <BR>
+                <BR>
                 <img data-src="assets/img/tallarinsaltadocomida.webp" alt="img3">
             </div>
         </div>
@@ -85,7 +94,7 @@
 
                 <div class="precio">
                     <p>S/. 17.00 clásico</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
@@ -95,8 +104,8 @@
                 <p>Arroz salteado con pollo, huevo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>S/. 16.00 clásico - S/. 30.00 mediano  S/. 50.00 familiar</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 16.00 clásico </p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
@@ -108,7 +117,7 @@
 
                 <div class="precio">
                     <p>S/. 13.00 clásico</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
@@ -118,96 +127,98 @@
                 <p>Tallarín con todas las carnes y verduras salteadas en salsa de ostión.</p>
 
                 <div class="precio">
-                    <p>S/. 33.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 33.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pasta">
-                <img data-src="assets/img/pasta1.webp" alt="pasta">
-                <h2>Pasta</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/aeropuertoespecial_aeropuerto.webp" alt="pasta">
+                <h2>Aeropuerto Especial</h2>
+                <p>Arroz salteado con tallarín frito, langostino, chancho, pollo, huevo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 19.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pasta">
-                <img data-src="assets/img/pasta1.webp" alt="pasta">
-                <h2>Pasta</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/chaufapontu_chaufas.webp" alt="pasta">
+                <h2>Chaufa PON - TU</h2>
+                <p>Arroz salteado con salchicha china, pollo, chancho, langostino, 
+                    durazno, piña y jolantau.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>s/.25.00 clásico </p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pizza">
-                <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pizza</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/sopafuchifu_sopas.webp" alt="pizza">
+                <h2>SOPA FUCHIfU</h2>
+                <p>Concentrado de caldo de pollo con clara de huevo, fideos fan si y filete de pollo.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 13.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pizza">
-                <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pizza</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/tallarinsamsi_tallarines.webp" alt="pizza">
+                <h2>Tallarín sam si</h2>
+                <p>Tallarín con langostino, chancho, pollo salteado con verdutas y cubierto de tallarín fansi con huevo revuelto.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 30.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pizza">
-                <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pizza</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/chaufaespecial_chaufas.webp" alt="pizza">
+                <h2>Chaufa especial</h2>
+                <p>Arroz salteado con langostino, chancho, pollo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 19.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="postre">
-                <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/tallarindechancho_tallarines.webp" alt="postre">
+                <h2>Tallarín de lomo de chancho</h2>
+                <p>Tallarín con lomo de chancho y verduras salteadas en salsa de ostión.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 22.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="postre">
-                <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/sopawantanespecial_sopas.webp" alt="postre">
+                <h2>SOPA WANTAN ESPECIAL</h2>
+                <p>Caldo de pollo acompañado con wántan al vapor, fideos, huevos de codorniz 
+                    y todas las carnes.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 16.00 clásico </p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="postre">
-                <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/aeropuertodelangostino_aeropuerto.webp" alt="postre">
+                <h2> aeropuerto de langostino</h2>
+                <p>Arroz salteado con tallarín frito, langostino, huevo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
-                    <button><i class="bi bi-info-circle"></i></button>
+                    <p>S/. 19.00 clásico</p>
+                    <button><i class="bi bi-plus-circle"></i></button>
                 </div>
             </div>
         </div>
@@ -216,18 +227,19 @@
     <div class="separador">
         <div class="contenido-separador contenedor">
             <h2>Comida China a tu alcance </h2>
-            <p>Nada mejor en tu día que comer un delicioso buffet con nosotros</p>
+            <p>Nada mejor en tu día que comer unos deliciosos platos orientales con nosotros</p>
             <a href="#" class="btn btn-azul">Información aquí</a> <!--cambio -->
         </div>
     </div>
 
     <section class="chef contenedor">
-        <h2>Chef Principal</h2>
-        <div class="contenido-chef">
+       <h2>  Chef Principal  </h2>
+        <div class="contenido-chef"> 
             <div class="texto-chef">
-                <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid provident harum hic minima in.facilis obcaecati. </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem accusantium fugiat incidunt minima placeat libero! Perspiciatis officiis explicabo aliquid quia labore quisquam! Voluptates quos maiores hic nobis ipsa, sint numquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                <a href="#" class="btn btn-azul">Leer biografía</a>  <!--cambio -->
+                
+                <h3>Comenzando a cocinar hace más de 20 años, Guido Alberto Lau Santiago aprendió con pasión el secreto de la cocina de Asia Oriental. </h3>
+                <p>Gracias a su ascendencia china que le inculcaron desde pequeño descubrió su pasión por la cocina, hoy en día es uno de los mejores restaurantes tanto en sabor, como en calidad. Es el responsable de la producción de alimentos, planificar los menús, manejo de presupuesto e incluso de la contratación y capacitación del personal de cocina. </p>
+                <center><a href="#" class="btn btn-azul">Leer biografía</a></center>  <!--cambio -->
             </div>
     
             <div class="imagen-chef">
@@ -239,7 +251,7 @@
     <div class="formulario-contacto contenedor">
         <div class="informacion-contacto">
             <h3>Contactanos</h3>
-            <p><i class="bi bi-geo-alt-fill"></i> Los Geranios 3388 Surco</p>
+            <p><i class="bi bi-geo-alt-fill"></i> Av. Belaunde 249 Comas</p>
             <p><i class="bi bi-envelope-fill"></i> chifapontu@gmail.com</p>
             <p><i class="bi bi-whatsapp"></i> +51 960 454 537</p>
 
@@ -286,16 +298,16 @@
         <div class="contenedor-piepagina contenedor">
             <div class="info">
                 <h3>Direccion</h3>
-                <p>Avenida belaunde pana</p>
+                <p>Avenida belaunde 249 Comas</p>
             </div>
             <div class="info">
                 <h3>Dias Especiales</h3>
-                <p>Sabados y domingos 12am - 4am</p>
+                <p>Sabados y domingos 4pm - 10pm</p>
                 <p>+51925799489</p>
             </div>
             <div class="info">
                 <h3>Horarios</h3>
-                <p>Lunes - Domingo 1am - 12am</p>
+                <p>Lunes - Domingo 12pm - 11pm</p>
                 <div class="redes-sociales redes-pie">
                     <p><i class="bi bi-facebook"></i>
                     <i class="bi bi-twitter"></i>
@@ -304,7 +316,7 @@
             </div>
             <div class="info">
                 <h3>Noticias</h3>
-                <p>Visitanos para probar la sazon</p>
+                <p>Visitanos para probar la sazón</p>
                 <input type="email" placeholder="Tu correo">
                 <input type="submit" class="btn btn-azul" value="Suscribirse">
             </div>
@@ -312,7 +324,7 @@
     </div>
 
     <footer class="footer">
-        <p>Todos los derechos reservados &copy;MarcosRomero</p>
+        <p>Todos los derechos reservados &copy;MarcosRomero&Abi&Mel</p>
     </footer>
 
     <script src="js/app.js"></script>
