Boton iniciar sesion agregado

--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
     <header class="encabezado">
         <div class="contenedor-navegacion">
             <div class="contenido-navegacion contenedor">
+
                 <div class="logo">
                     <h2>CHIFA <span class="rojo">PON</span> <span class="verde">TU</span> </h2>
                 </div>
+
                 <nav class="navegacion ocultar">
+                    <a href="#">Iniciar sesion</a>
                     <a href="#">Inicio</a>
                     <a href="#">Sobre Nosotros</a>
                     <a href="#">Menú</a>
                     <a href="#">Chef</a>
                     <a href="#">Contacto</a>
+
+
                 </nav>
                 <div class="hamburguesa">
                     <span></span>
                     <span></span>
                     <span></span>
+                    
                 </div>
             </div>
         </div>
@@ -60,17 +66,17 @@
             <div class="imagen1">
                 <BR>
                 <BR>
-                <BR>
+                <BR> 
                 <img data-src="assets/img/chicacomida.webp" alt="img1">
             </div>
             <div class="imagenes2">
                 <BR>
                 <BR>
-                <BR>
+                <BR> 
                 <img data-src="assets/img/chaufacomida_bienvenido.webp" alt="img2">
                 <BR>
                 <BR>
-                <BR>
+                <BR> 
                 <img data-src="assets/img/tallarinsaltadocomida.webp" alt="img3">
             </div>
         </div>
