--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <h2>CHIFA <span class="rojo">PON</span> <span class="verde">TU</span> </h2>
                 </div>
                 <nav class="navegacion ocultar">
+                    <a href="#">Iniciar Sesión</a>
                     <a href="#">Inicio</a>
                     <a href="#">Sobre Nosotros</a>
                     <a href="#">Menú</a>
@@ -52,7 +53,13 @@
         <div class="texto-nosotros">
             <p class="bienvenido">Bienvenido</p>
             <h1>Chifa Pon Tu</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo assumenda tempore laborum accusantium, aspernatur molestias, accusamus autem aut obcaecati omnis harum provident dolores ipsam iste distinctio a quam maxime sit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum accusamus voluptatum quibusdam nihil, doloremque tempora, earum cupiditate nesciunt harum vitae amet officiis quia dolore sed exercitationem similique distinctio corporis illum.</p>
+            <p>El restaurante de comida oriental “CHIFA PON TU” lleva más de 20 años brindando y alegrando el 
+                paladar de sus comensales con su sazón única e inigualable, entregando un excelente servicio y 
+                como la mejor alternativa para compartir un buen momento familiar o en compañía de los amigos. 
+                Es un lugar mediano a diferencia de restaurantes más grandes y reconocidos, sin embargo, 
+                es muy consumido y catalogado por sus comensales como uno de las mejores chifas del cono norte 
+                a nivel de Comas; por la misma razón llegan clientes en abundancia día tras día de diferentes 
+                lugares de la capital a degustar su inigualable sazón.</p>
 
             <a href="#" class="btn btn-rojo">Contactar</a>
         </div>
@@ -124,89 +131,91 @@
             </div>
 
             <div class="platillo" data-platillo ="pasta">
-                <img data-src="assets/img/pasta1.webp" alt="pasta">
-                <h2>Pasta</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/aeropuertoespecial_aeropuerto.webp" alt="pasta">
+                <h2>Aeropuerto Especial</h2>
+                <p>Arroz salteado con tallarín frito, langostino, chancho, pollo, huevo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 19.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pasta">
-                <img data-src="assets/img/pasta1.webp" alt="pasta">
-                <h2>Pasta</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/chaufapontu_chaufas.webp" alt="pasta">
+                <h2>Chaufa PON - TU</h2>
+                <p>Arroz salteado con salchicha china, pollo, chancho, langostino, 
+                    durazno, piña y jolantau.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>s/.25.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pizza">
-                <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pizza</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/sopafuchifu_sopas.webp" alt="pizza">
+                <h2>SOPA FUCHIfU</h2>
+                <p>Concentrado de caldo de pollo con clara de huevo, fideos fan si y filete de pollo.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 13.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pizza">
-                <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pizza</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/tallarinsamsi_tallarines.webp" alt="pizza">
+                <h2>Tallarín sam si</h2>
+                <p>Tallarín con langostino, chancho, pollo salteado con verdutas y cubierto de tallarín fansi con huevo revuelto.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 30.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="pizza">
-                <img data-src="assets/img/pasta1.webp" alt="pizza">
-                <h2>Pizza</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/chaufaespecial_chaufas.webp" alt="pizza">
+                <h2>Chaufa Especial</h2>
+                <p>Arroz salteado con langostino, chancho, pollo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 19.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="postre">
-                <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/tallarindechancho_tallarines.webp" alt="postre">
+                <h2>Tallarín de lomo de chancho</h2>
+                <p>Tallarín con lomo de chancho y verduras salteadas en salsa de ostión.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 22.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="postre">
-                <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/sopawantanespecial_sopas.webp" alt="postre">
+                <h2>SOPA WANTAN ESPECIAL</h2>
+                <p>Caldo de pollo acompañado con wántan al vapor, fideos, huevos de codorniz 
+                    y todas las carnes.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 16.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
             <div class="platillo" data-platillo ="postre">
-                <img data-src="assets/img/pasta1.webp" alt="postre">
-                <h2>Postre</h2>
-                <p>Pasta, tallarin, orégano y azufre</p>
+                <img data-src="assets/img/aeropuertodelangostino_aeropuerto.webp" alt="postre">
+                <h2>Aeropuerto de langostino</h2>
+                <p>Arroz salteado con tallarín frito, langostino, huevo y cebolla china.</p>
 
                 <div class="precio">
-                    <p>s/40.00</p>
+                    <p>S/. 19.00 clásico</p>
                     <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
@@ -225,8 +234,8 @@
         <h2>Chef Principal</h2>
         <div class="contenido-chef">
             <div class="texto-chef">
-                <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid provident harum hic minima in.facilis obcaecati. </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem accusantium fugiat incidunt minima placeat libero! Perspiciatis officiis explicabo aliquid quia labore quisquam! Voluptates quos maiores hic nobis ipsa, sint numquam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h3>Comenzando a cocinar hace más de 20 años, Guido Alberto Lau Santiago aprendió con pasión el secreto de la cocina de Asia Oriental. </h3>
+                <p>Gracias a su ascendencia china que le inculcaron desde pequeño descubrió su pasión por la cocina, hoy en día es uno de los mejores restaurantes tanto en sabor, como en calidad. Es el responsable de la producción de alimentos, planificar los menús, manejo de presupuesto e incluso de la contratación y capacitación del personal de cocina. </p>
                 <a href="#" class="btn btn-azul">Leer biografía</a>  <!--cambio -->
             </div>
     
@@ -286,7 +295,7 @@
         <div class="contenedor-piepagina  contenedor">
             <div class="info">
                 <h3>Direccion</h3>
-                <p>Av. Belaunde</p>
+                <p>Av. Belaunde ###</p>
             </div>
             <div class="info">
                 <h3>Días Especiales</h3>
