Css reorganizado e iconos corregidos

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="precio">
                     <p>S/. 17.00 clásico</p>
-                    <button><i class="bi bi-plus-circle"></i></button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
 
                 <div class="precio">
                     <p>S/. 16.00 clásico </p>
-                    <button><i class="bi bi-plus-circle"></i></button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
 
                 <div class="precio">
                     <p>S/. 13.00 clásico</p>
-                    <button><i class="bi bi-plus-circle"></i></button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
@@ -131,7 +131,7 @@
 
                 <div class="precio">
                     <p>S/. 33.00 clásico</p>
-                    <button><i class="bi bi-plus-circle"></i></button>
+                    <button><i class="bi bi-info-circle"></i></button>
                 </div>
             </div>
 
